修改后，成功跑起来

--- a/src/modules/Layout/LayoutMain.less
+++ b/src/modules/Layout/LayoutMain.less
@@ -1,5 +1,5 @@
 .custom-ant-layout-header {
-    background: rgba(15,30,79,1);
+    background-color: #f4f7ed;
     padding: 0;
     height: 100px;
     line-height: 100px;
@@ -14,7 +14,7 @@
 }
 
 .custom-ant-layout-content {
-    background: rgba(247,247,247,1);   
+    background-color: #f4f7ed;  
 
     .content-container {
         width: 1100px;
@@ -22,19 +22,11 @@
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
-
-        .group-container {
-            width: 1100px;
-            display: flex;
-            justify-content: flex-start;
-            flex-wrap: wrap;
-        }
     }
 }
 
 .custom-ant-layout-footer {
-    // background: rgba(15,30,79,1);
-    background-color: #f7f7f7;
+    background-color: #f4f7ed;
     padding: 0;
     height: 100px;
     line-height: 100px;
@@ -49,7 +41,7 @@
 }
 
 body {
-    background-color: #f7f7f7;
+    background-color: #f4f7ed;
     min-width: 1100px;
 }
 
