写好了首页、注册页、登陆页的样式

--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./fonts/icomoon.eot?r7bvcg');
-  src:  url('./fonts/icomoon.eot?r7bvcg#iefix') format('embedded-opentype'),
-    url('./fonts/icomoon.ttf?r7bvcg') format('truetype'),
-    url('./fonts/icomoon.woff?r7bvcg') format('woff'),
-    url('./fonts/icomoon.svg?r7bvcg#icomoon') format('svg');
+  src:  url('./fonts/icomoon.eot?dysirg');
+  src:  url('./fonts/icomoon.eot?dysirg#iefix') format('embedded-opentype'),
+    url('./fonts/icomoon.ttf?dysirg') format('truetype'),
+    url('./fonts/icomoon.woff?dysirg') format('woff'),
+    url('./fonts/icomoon.svg?dysirg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,13 +24,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-delete:before {
-  content: "\e902";
-}
-.icon-location:before {
-  content: "\e901";
-}
-.icon-download:before {
+.icon-enter-rocket:before {
   content: "\e900";
 }
 
