实现登陆注册，基于token的认证，团队的展示与新建，正在开发通用头部

--- a/src/modules/Components/Content/HomePage.less
+++ b/src/modules/Components/Content/HomePage.less
@@ -1,3 +1,5 @@
+.custom-ant-layout-content { 
+.content-container {
 .homepage-container {
     width: 1100px;
 
@@ -5,7 +7,7 @@
     .h2-your-office,
     .p-task-manager-system,
     .link-container {
-       text-align: center;
+    text-align: center;
     }
     .img-logo {
         display: block;
@@ -37,4 +39,6 @@
             }
         }
     }
+}
+}
 }
