--- a/src/modules/Components/Content/SignInContent.less
+++ b/src/modules/Components/Content/SignInContent.less
@@ -1,4 +1,6 @@
-.signin-content-container {
+.custom-ant-layout-content { 
+.content-container {
+.signup-content-container {
     width: 1100px;
 
     .img-logo {
@@ -8,7 +10,7 @@
         height: 112px;
     }
 
-    .signin-form {
+    .signup-form {
         max-width: 300px;
         margin: 0 auto;
 
@@ -16,8 +18,10 @@
         //     float: right;
         // }
 
-        .signin-form-button {
+        .login-form-button {
             width: 100%;
         }
     }
+}
+}
 }
