--- a/src/modules/Layout/LayoutMain.less
+++ b/src/modules/Layout/LayoutMain.less
@@ -8,8 +8,6 @@
         width: 1100px;
         height: 100px;
         margin: 0 auto;
-        display: flex;
-        align-items: center;
     }
 }
 
@@ -35,8 +33,6 @@
         width: 1100px;
         height: 100px;
         margin: 0 auto;
-        display: flex;
-        align-items: center;
     }
 }
 
@@ -45,6 +41,17 @@ body {
     min-width: 1100px;
 }
 
+// .custom-bg-img-style-contain {
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     background-position: center;
+// }
+
+// .custom-bg-img-style-cover {
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     background-position: center;
+// }
 
 
 
