完成大部分功能

--- a/src/modules/Components/Content/NewProjectsContent.less
+++ b/src/modules/Components/Content/NewProjectsContent.less
@@ -50,9 +50,10 @@
         color: #999;
     }
 
-    .ant-checkbox-group {
+    .checkbox-ct {
         width: 670px;
         min-height: 160px;
+        margin-bottom: 20px;
     }
 
     .cancel {
