--- a/src/modules/Components/Content/SignInContent.less
+++ b/src/modules/Components/Content/SignInContent.less
@@ -1,6 +1,6 @@
 .custom-ant-layout-content { 
 .content-container {
-.signup-content-container {
+.signin-content-container {
     width: 1100px;
 
     .img-logo {
@@ -10,7 +10,7 @@
         height: 112px;
     }
 
-    .signup-form {
+    .signin-form {
         max-width: 300px;
         margin: 0 auto;
 
@@ -18,7 +18,7 @@
         //     float: right;
         // }
 
-        .login-form-button {
+        .signin-form-button {
             width: 100%;
         }
     }
