--- a/src/modules/Components/Content/MembersContent.less
+++ b/src/modules/Components/Content/MembersContent.less
@@ -9,6 +9,17 @@
     padding: 30px;
     box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
 
+    .apply-join-tip {
+        width: 200px;
+        height: 30px;
+        margin: 0 auto;
+        display: block;
+        line-height: 30px;
+        text-align: center;
+        font-size: 14px;
+        background-color: #eeb439;
+        color: #fff;
+    }
     
     .members-tools {
         width: 100%;
