--- a/src/modules/Components/Content/ProjectsContent.less
+++ b/src/modules/Components/Content/ProjectsContent.less
@@ -26,7 +26,41 @@
     .projects {
         width: 100%;
         min-height: 406px;
+        padding: 0 32px;
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
         // background-color: #978234;
+
+        .project {
+            width: 258px;
+            height: 170px;
+            display: block;
+
+            .ant-card {
+                width: 100%;
+                height: 100%;
+                color: #999;
+                background-color: transparent;
+                border: 0;
+
+                .icon {
+                    font-size: 80px;
+                    display: block;
+                }
+                .project-name {
+                    font-size: 24px;
+                    display: block;
+                    margin-top: 10px;
+                    text-align: center;
+                }
+            }
+
+            .ant-card:hover {
+                background-color: #fff;
+                color: #71a7ce;
+            }
+        }
     }
 
     .projects-footer {
