--- a/src/modules/Components/Content/SignUpContent.less
+++ b/src/modules/Components/Content/SignUpContent.less
@@ -1,6 +1,6 @@
 .custom-ant-layout-content { 
 .content-container {
-.signin-content-container {
+.signup-content-container {
     width: 1100px;
 
     .img-logo {
@@ -10,7 +10,7 @@
         height: 112px;
     }
 
-    .signin-form {
+    .signup-form {
         max-width: 300px;
         margin: 0 auto;
 
@@ -18,8 +18,27 @@
         //     float: right;
         // }
 
-        .signin-form-button {
+        .signup-form-button {
             width: 100%;
+        }
+
+        .team-info {
+            width: 300px;
+            height: 80px;
+
+            .title {
+                width: 100%;
+                font-size: 24px;
+                color: #71a7ce;
+                text-align: center;
+            }
+
+            .hint-text {
+                width: 100%;
+                text-align: center;
+                font-size: 18px;
+                color: #aaa;
+            }
         }
     }
 }
