完成任务功能，个人设置功能，修改好几个BUG

--- a/src/modules/Components/Content/ProjectContent.less
+++ b/src/modules/Components/Content/ProjectContent.less
@@ -10,14 +10,18 @@
 
     .project-header {
         width: 100%;
-        height: 82px;
+        min-height: 82px;
         padding: 20px 40px;
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
 
         .title {
             font-size: 30px;
+        }
+
+        .project-description {
+            max-width: 760px;
         }
 
         .summary {
@@ -50,7 +54,8 @@
                 }
             }
 
-            .setting:hover {
+            .setting:hover,
+            .members-info:hover {
                 color: #108ee9;
             }
             
