--- a/src/modules/Components/Content/TeamSettingContent.less
+++ b/src/modules/Components/Content/TeamSettingContent.less
@@ -96,3 +96,25 @@
         }
     }
 }
+
+.delete-team-modal {
+
+    .ant-modal {
+        position: absolute;
+        width: 520px;
+        height: 300px;
+        top: 50%;
+        left: 50%;
+        margin-left: -260px;
+        margin-top: -150px;
+
+        .ant-modal-title {
+            font-size: 20px;
+        }
+
+        .text {
+            font-size: 16px;
+            text-align: center;
+        }
+    }
+}
