--- a/src/modules/Components/Content/MemberContent.less
+++ b/src/modules/Components/Content/MemberContent.less
@@ -10,7 +10,98 @@
     box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
 
     
-    
+    .header {
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .user-container {
+            width: 100%;
+            height: 80px;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+             .head-img {
+                display: block;
+                height: 80px;
+                width: 80px;
+                border-radius: 100%;
+                
+            }
+
+            .container {
+                margin-left: 30px;
+                height: 80px;
+
+                .uesr-name {
+                    font-size: 30px;
+                    color: 333;
+                }
+
+                .email {
+                    margin-top: 4px;
+                    font-size: 14px;
+                    color: #999;
+                }
+            }
+        }
+
+       
+        .manager-control {
+            width: 100px;
+            height: 80px;
+            line-height: 80px;
+            text-align: right;
+        }
+        
+    }
+
+    .nav-link-bar {
+        width: 100%;
+        height: 40px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0 20px;
+
+        .link {
+            font-size: 14px;
+        }
+    }
+
+    .hr {
+        width: 100%;
+        height: 1px;
+        display: block;
+        background-color: #ccc;
+    }
+
+    .hr-top {
+        margin-top: 20px;
+    }
+
+    .task {
+        width: 100%;
+        font-size: 16px;
+        color: #71a7ce;
+        overflow: visible;
+
+        .ant-card-body {
+            padding: 10px 24px;
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    .mark {
+        font-size: 14px;
+        color: #999;
+        margin-top: 10px;
+        padding: 10px 25px;
+    }
 }
 }
 }
